# ChangeLog for dev-lang/mosml
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/mosml/ChangeLog,v 1.11 2009/07/23 23:14:32 vostorga Exp $

  23 Jul 2009; Víctor Ostorga <vostorga@gentoo.org> mosml-2.01.ebuild,
  mosml-2.01-r1.ebuild:
  Respecting CC variable, closes bug #243880

  30 May 2009; Jeremy Olexa <darkside@gentoo.org> mosml-2.01-r1.ebuild:
  (non maintainer commit) Fix by Victor Ostorga to no longer pre-strip files,
  bug 240215

*mosml-2.01-r1 (06 Jun 2008)

  06 Jun 2008; Jeremy Olexa <darkside@gentoo.org>
  +files/mosml-2.01-malloc.patch, +mosml-2.01-r1.ebuild:
  Fixed HOMEPAGE/SRC_URI. Added patch provided from upstream to fix: 'may
  crash on 64 bit architectures as well as on those 32 bit architectures that
  use glibc 2.7'. Thanks Michael Helmling for reporting, bug #154859

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove plasmaroo from metadata.xml due to retirement.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  05 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> mosml-2.01.ebuild:
  Stable on ppc.

  23 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> mosml-2.01.ebuild:
  added ~amd64 to KEYWORDS. fixes #Bug 71083

  22 Jun 2004; David Holm <dholm@gentoo.org> mosml-2.01.ebuild:
  Added to ~ppc.

*mosml-2.01 (18 Feb 2004)

  18 Feb 2004; <plasmaroo@gentoo.org> mosml-2.01.ebuild:
  Version bump; closes bug #41560.

*mosml-2.00 (13 Nov 2003)

  13 Nov 2003; <plasmaroo@gentoo.org> mosml-2.00.ebuild:
  Initial import, thanks to Malcolm Scott <m@lcolm.org.uk> for providing 
  the ebuild and filing the bug. Bug #33153 closed.