@@ -1,5 +1,5 @@
 AUX mosml-2.01-malloc.patch 688 RMD160 61b3f87ad34235b0ddf502c38286b0bff1bad817 SHA1 706f795aa94668873d93a304014154e1f57c57d8 SHA256 b03324dd9a62ca564cf50cdf300b08c22d03a2b724832f1783a130dce787d823
 DIST mos201src.tar.gz 2314392 RMD160 b2a9582d8c0bfdad2b8a74740e54ab33d3856637 SHA1 eba58486b10f0359fafba488fa1bf366b2aabf8a SHA256 9ec5695358a4aa4702d856c026f3cf0bce77275e8d1318fd90d455a44c46edff
-EBUILD mosml-2.01-r1.ebuild 1520 RMD160 41443a20818d1ff105375d23006931aa900db84b SHA1 35b772881d8286f1dfb29a30c43123f0996347cb SHA256 80add6ba5af0330f2b5d4a96318d0efa3dea163a2a7075685b5a17dbc30749fd
-MISC ChangeLog 1825 RMD160 95bbfc63c9b633a205a53cdb6896e5a9ff7b3f2e SHA1 6a0d2466c833312d0060f8a805787686eb48bec5 SHA256 96f191e3f7f346a2359dbb57283c938b909968d7dee4d93254e27c49eab36073
+EBUILD mosml-2.01-r1.ebuild 1574 RMD160 e6e7628c9eb1a5513f5b4178f7f6d69b841d94e6 SHA1 6e5b2b866d296dbca016e9c3e43794ca43f0065e SHA256 71a90ca48fbca63f98d1aad03244d6a5db3b9e1b97c0238091648d9a260fa214
+MISC ChangeLog 1939 RMD160 ff0c372e870606eb2a13efbd40e3d8ab82e2f9bc SHA1 8b3c6c5c827f6e11f8c0115554472328aafc4b16 SHA256 507df2959f75dfb2b5153f8b8193c1f389f2a2f0ae1f91d2b0f445e8d1884247
 MISC metadata.xml 233 RMD160 d81ec1a0582856aeac5ef3bfec5c80d9850216f6 SHA1 9b94f113e7f382076b1749c2a856e409c96cade3 SHA256 dce03f6cdd96135caf3c971a5ca4a8c916f44532fe8cfb6df88b7bdade407e8b
