@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/mosml
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/mosml/ChangeLog,v 1.11 2009/07/23 23:14:32 vostorga Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/mosml/ChangeLog,v 1.12 2009/08/17 01:41:25 vostorga Exp $
+
+  17 Aug 2009; Víctor Ostorga <vostorga@gentoo.org> mosml-2.01.ebuild,
+  mosml-2.01-r1.ebuild:
+  Respecting CPP
 
   23 Jul 2009; Víctor Ostorga <vostorga@gentoo.org> mosml-2.01.ebuild,
   mosml-2.01-r1.ebuild:
